src/K8S/kafka2-depl.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-broker
  template:
    metadata:
      labels:
        app: kafka-broker
    spec:
      containers:
      - name: broker
        image: confluentinc/cp-kafka:7.0.1
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-broker-clusterip-srv
spec: 
  type: ClusterIP
  selector:
    app: kafka-broker
  ports:
    - name: kafka-port
      protocol: TCP
      port: 9092
      targetPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: kafka-broker
  ports:
  - name: kafka-port
    protocol: TCP
    port: 9092
    targetPort: 9092
