src/K8S/players-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: players-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playersservice
  template:
    metadata:
      labels:
        app: playersservice
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: playersservice
        image: maximnesterov/playersservice:1.1
        imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: playersservice-clusterip-srv
spec: 
  type: ClusterIP
  selector:
    app: playersservice
  ports:
    - name: playersservice
      protocol: TCP
      port: 80
      targetPort: 80
