src/K8S/zookeeper-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: wurstmeister/zookeeper
        ports:
        - containerPort: 2181
          name: zookeeper-port
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-clusterip-srv
spec: 
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
    - name: zookeeper-port
      protocol: TCP
      port: 2181
      targetPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: zookeeper
  ports:
  - name: zookeeper-port
    protocol: TCP
    port: 2181
    targetPort: 2181
