src/K8S/zookeeper2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper-depl
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:7.0.1
        ports:
        - containerPort: 2181
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-clusterip-srv
spec: 
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
    - name: zookeeper-port
      protocol: TCP
      port: 2181
      targetPort: 2181
