src/K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: nba-services.com
      http:
        paths:
          - path: /api/teams
            pathType: Prefix
            backend: 
              service:
                name: teamsservice-clusterip-srv
                port:
                  number: 80
          - path: /api/players
            pathType: Prefix
            backend: 
              service:
                name: playersservice-clusterip-srv
                port:
                  number: 80
